k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amr-prediction-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amr_prediction
  template:
    metadata:
      labels:
        app: amr_prediction
    spec:
      containers:
        - name: api
          image: amr_prediction-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet: {path: /health, port: 8000}
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet: {path: /health, port: 8000}
            periodSeconds: 10
          readinessProbe:
            httpGet: {path: /ready, port: 8000}
            periodSeconds: 5
          resources:
            requests: {cpu: 100m, memory: 1000000000Mi}
            limits: {cpu: "1", memory: 1000000000Mi}
