k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amr-prediction-service
spec:
  type: ClusterIP
  selector:
    app: amr_prediction
  ports:
    - port: 80
      targetPort: 8000
